--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
     "name": "AsyncStorage",
     "version": "0.0.1",
-    "scripts": {
-        "test": "make test"
-    },
     "devDependencies": {
-        "chai": "1.9.1",
-        "mocha": "1.20.0"
+        "chai": "~1.9.1",
+        "grunt": "^0.4.5",
+        "grunt-contrib-jshint": "^0.10.0",
+        "grunt-karma": "^0.8.3",
+        "karma-chai": "~0.1.0",
+        "karma-coverage": "~0.2.4",
+        "karma-mocha": "~0.1.6",
+        "karma-mocha-reporter": "0.3.1",
+        "karma-phantomjs-launcher": "^0.1.4",
+        "karma-sinon": "~1.0.3",
+        "load-grunt-tasks": "^0.6.0",
+        "mocha": "~1.20.1"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
     }
 }
